Napravio sam neku test app s buttonima

--- a/Student4Life/res/values/strings.xml
+++ b/Student4Life/res/values/strings.xml
@@ -3,5 +3,7 @@
 
     <string name="hello">Hello World, Student4LifeActivity!</string>
     <string name="app_name">Student4Life</string>
+    <string name="prihvati">Prihvati</string>
+    <string name="odbaci">Odbaci</string>
 
 </resources>
